--- a/client/index.html
+++ b/client/index.html
@@ -5,14 +5,9 @@
     <meta http-equiv="cleartype" content="on" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>whichday?</title>
+    <title>A Site</title>
     <meta name="description" content="" />
 
-    <!-- Icons -->
-    <link rel="shortcut icon" href="/images/favicon.ico" />
-
-    <!-- fonts  -->
-    <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
 
   </head>
   <body>
